app/assets/stylesheets/home.css.scss
// Place all the styles related to the Home controller here.
// They will automatically be included in application.css.scss.scss.
// You can use Sass (SCSS) here: http://sass-lang.com/

a.admin-link:link, a.admin-link:active, a.admin-link:hover, a.admin-link:visited {
  background: none;
}

.wish-form {
  width: 100%;
  height: 170px;
  margin-top: 5px;
  display: none;
}

.wish:hover {
  cursor: pointer;
}

.contact-box {
  padding-top: 60px;
  padding-bottom: 20px;
  background: #ffffff;
  border-radius: 30px;
  -webkit-border-radius: 30px;
  -moz-border-radius: 30px;
  -o-border-radius: 30px;
  margin-bottom: 40px;
  margin-right: -25px;
}

.margin-top-fix {
  margin-top: 25px;
}

.contact-circle {
  background: #9daba4;
  border-radius: 100%;
  -webkit-border-radius: 100%;
  -moz-border-radius: 100%;
  -o-border-radius: 100%;
  float: right;
  margin-top: 15px;
  width: 60px;
  height: 60px;
}

.contact-text {
  color: #9daba4!important;
  font-weight: bold;
  font-size: 17px;
  margin: 0;
}

.contact-text-white {
  color: #ffffff!important;
  font-weight: bold;
  font-size: 17px;
  margin: -85px 0 0 15px;
  padding-bottom: 50px;
}

.popup-text {
  color: #000000!important;
}

.text-fix {
  p {
    color: #000000!important;
  }
}

.padding-fix {
  padding-left: 80px!important;
  padding-right: 80px!important;
}

.close-fix {
  padding-right: 50px!important;
}

a.close-fix:link, a.close-fix:active, a.close-fix:hover, a.close-fix:visited {
  background: none;
}

.video-container {
  width: 100%;
  height: 225px;
  margin-left: auto;
  margin-right: auto;
  border: 3px solid #ffffff;
}

.video-container iframe,
.video-container object,
.video-container embed {
  width: 100%;
  height: 100%;
  margin-left: auto;
  margin-right: auto;
}

.content-video {
  width: 318px!important;
  height: 232px;
  margin-left: auto;
  margin-right: auto;
  margin-top: -5px;
}

.content {
  width: 290px!important;
  height: 225px;
  margin-left: auto;
  margin-right: auto;
  margin-top: -5px;
  border: 3px solid #ffffff;
  padding: 0!important;
}

.content img {
  width: 100%;
}

h4.index-heading {
  color: #fff;
  margin-top: -3px;
  padding: 0;
  font-size: 16px;
  font-family: Calibri!important;
  font-weight: bold;
}

.movie-box-wrapper {
  text-align: center;
  padding-top: 12px;
  width: 444px!important;
  height: 300px;
  background: asset-data-url('content-box.png');
  background-repeat:no-repeat;
  background-size:contain;
  background-position:center;
  margin-bottom: 25px;
}

.topbar {
  min-height: 150px;
  padding-top: 10px;
}

.social-media-links img {
  -webkit-transition: all 200ms ease-in;
  -webkit-transform: scale(1);
  -ms-transition: all 200ms ease-in;
  -ms-transform: scale(1);
  -moz-transition: all 200ms ease-in;
  -moz-transform: scale(1);
  transition: all 200ms ease-in;
  transform: scale(1);
}
.social-media-links img:hover {
  -webkit-transition: all 200ms ease-in;
  -webkit-transform: scale(1.2);
  -ms-transition: all 200ms ease-in;
  -ms-transform: scale(1.2);
  -moz-transition: all 200ms ease-in;
  -moz-transform: scale(1.2);
  transition: all 200ms ease-in;
  transform: scale(1.2);
}

.sidebar {
  float: left;
  margin-top: 50px;
  text-align: center;
}

.menu-btn {
  display: none;
}

.menu-login {
  width: 100%;
  height: 150px;
  margin-left: -10px;
  background: asset-data-url('login.png');
  background-repeat:no-repeat;
  background-size:contain;
  background-position:center;
}

.menu-login:hover {
  background: asset-data-url('login-hover.png');
  background-repeat:no-repeat;
  background-size:contain;
  background-position:center;
}

.menu-logout {
  width: 100%;
  height: 150px;
  margin-left: -10px;
  background: asset-data-url('logout.png');
  background-repeat:no-repeat;
  background-size:contain;
  background-position:center;
}

.wish {
  width: 100%;
  height: 250px;
  margin-left: -10px;
  background: asset-data-url('wish.png');
  background-repeat:no-repeat;
  background-size:contain;
  background-position:center;
}

.menu-button, .menu-button2, .menu-button3, .menu-button4, .menu-button5, .menu-button6, .menu-button7, .menu-button8, .menu-button9 {
  width: 100%;
  height: 40px;
  padding-top: 7px;
  margin-bottom: 10px;
}

.menu-button {
  background: asset-data-url('menu-button.png');
  background-repeat:no-repeat;
  background-size:contain;
  background-position:center;
}

.menu-button-selected, .menu-button2-selected, .menu-button3-selected, .menu-button4-selected, .menu-button5-selected, .menu-button6-selected, .menu-button7-selected, .menu-button8-selected {
  width: 100%;
  height: 40px;
  padding-top: 7px;
  margin-bottom: 10px;
}

.menu-button-selected {
  background: asset-data-url('menu-button-hover.png');
  background-repeat:no-repeat;
  background-size:contain;
  background-position:center;
}

.menu-button2 {
  background: asset-data-url('menu-button3.png');
  background-repeat:no-repeat;
  background-size:contain;
  background-position:center;
}

.menu-button2-selected {
  background: asset-data-url('menu-button2-hover.png');
  background-repeat:no-repeat;
  background-size:contain;
  background-position:center;
}

.menu-button3 {
  background: asset-data-url('menu-button4.png');
  background-repeat:no-repeat;
  background-size:contain;
  background-position:center;
}

.menu-button3-selected {
  background: asset-data-url('menu-button3-hover.png');
  background-repeat:no-repeat;
  background-size:contain;
  background-position:center;
}

.menu-button4 {
  background: asset-data-url('menu-button5.png');
  background-repeat:no-repeat;
  background-size:contain;
  background-position:center;
}

.menu-button4-selected {
  background: asset-data-url('menu-button4-hover.png');
  background-repeat:no-repeat;
  background-size:contain;
  background-position:center;
}

.menu-button5 {
  background: asset-data-url('menu-button5.png');
  background-repeat:no-repeat;
  background-size:contain;
  background-position:center;
}
/* ... */

